--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 <body>
   <h1>Heading for the content below</h1>
   <p>Text text text</p>
+  <p>Das läuft ja relativ gut bis jetzt, also machen wir jetzt den Raumplaner oder was anderes?</p>
 </body>
 
 </html>
