--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <title>Hallo Dominik 2</title>
+  <title>TO-DO</title>
 </head>
 
 <body>
-  <h1>Heading for the content belowhahahahahahahh</h1>
+  <h1>HIER KÖNNTE IHRE WERBUNG STEHEN</h1>
+  <input type="button" onclick="window.location.href = 'login.html';" value="login" />
+<input type="button" onclick="window.location.href = 'register.html';" value="register" />
   <p>Text text text</p>
   <p>Das läuft ja relativ gut bis jetzt, also machen wir jetzt den Raumplaner oder was anderes?</p>
 </body>
