--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hallo Dominik 2</title>
+  <link rel="stylesheet" href="styles/index.css">
+  <title>To do Liste</title>
 </head>
 
 <body>
-  <h1>Heading for the content belowhahahahahahahh</h1>
-  <p>Text text text</p>
-  <p>Das läuft ja relativ gut bis jetzt, also machen wir jetzt den Raumplaner oder was anderes?</p>
+  <div class="main">
+    <p class="title-1">The best</p>
+    <p class="title-2">To Do List</p>
+    <p class="title-3">of all time</p>
+    <button class="login-button">Anmelden</button>
+  </div>
 </body>
 
 </html>
