animate landing page

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,12 @@
 
 <body>
   <div class="main">
-    <p class="title-1">The best</p>
-    <p class="title-2">To Do List</p>
-    <p class="title-3">of all time</p>
-    <button class="login-button">Anmelden</button>
+    <div class="title">
+      <p class="title-1">The best</p>
+      <p class="title-2">To Do List</p>
+      <p class="title-3">of all time</p>
+    </div>
+    <button class="login-button">Login</button>
   </div>
 </body>
 
