--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/index.css">
   <title>To do Liste</title>
 </head>
@@ -12,7 +13,7 @@
       <p class="title-2">To Do List</p>
       <p class="title-3">of all time</p>
     </div>
-    <button class="login-button">Login</button>
+    <button class="login-button" onclick="window.location.href='login.html'">Login</button>
   </div>
 </body>
 
