--- a/public/login.html
+++ b/public/login.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" href="styles/general.css">
+  <link rel="stylesheet" href="styles/login.css">
   <title>Login</title>
 </head>
 
 <body>
-  <h1>Heading for the content belowhahahahahahahh</h1>
-  <p>Text text text</p>
-  <p>Das läuft ja relativ gut bis jetzt, also machen wir jetzt den Raumplaner oder was anderes?</p>
+  <body>
+    <form>
+        <h3>Login</h3>
+
+        <label for="username">Username</label>
+        <input type="text" placeholder="Email or Phone" id="username">
+
+        <label for="password">Password</label>
+        <input type="password" placeholder="Password" id="password">
+
+        <button>Log In</button>
+
+        <div class="register-link"><a href="register.html">Don't have an account yet? Register!</a></div>
+    </form>
+</body>
 </body>
 
 </html>
