--- a/public/login.html
+++ b/public/login.html
@@ -6,8 +6,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="login.css">
-  <script defer src="login.js"></script>
+  <link rel="stylesheet" href="styles/login.css">
+  <script defer src="js/login.js"></script>
 </head>
 
 <body>
