--- a/public/register.html
+++ b/public/register.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <title>Register</title>
+
+  <link rel="stylesheet" href="styles/general.css">
+  <link rel="stylesheet" href="styles/register.css">
+
+  <title>Registration Form</title>
 </head>
 
-<body>
-  <h1>Heading for the content belowhahahahahahahh</h1>
-  <p>Text text text</p>
-  <p>Das läuft ja relativ gut bis jetzt, also machen wir jetzt den Raumplaner oder was anderes?</p>
-</body>
 
+<body>
+  <form>
+    <h3>Registration Form</h3>
+
+    <label for="username-input">Username</label>
+    <input type="text" placeholder="Type your Email or Phone here" id="username-input">
+
+    <label for="password">Password</label>
+    <input type="password" placeholder="Type your Password here" id="password">
+
+    <label for="password">Repeat your Password</label>
+    <input type="password" placeholder="Type your Password here" id="password">
+
+    <button>Sign Up</button>
+
+  </form>
+</body>
 </html>
