--- a/public/login.html
+++ b/public/login.html
@@ -5,22 +5,24 @@
 
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/login.css">
-
+  <script defer src="js/login.js"></script>
   <title>Login</title>
 </head>
 
 
 <body>
-  <form>
+  <div id="login-error-msg" class="error-message" style="display: none;">Please fill out all fields.</div> </div>
+
+  <form id="login-form">
     <h3>Login</h3>
 
     <label for="username">Username</label>
-    <input type="text" placeholder="Email or Phone" id="username">
+    <input type="text"  placeholder="Email or Phone" id="username" name="username" required>
 
     <label for="password">Password</label>
-    <input type="password" placeholder="Password" id="password">
+    <input type="password" placeholder="Password" id="password" name="password" required>
 
-    <button>Log In</button>
+    <button type="button" onclick="validateForm()">Log In</button>
 
     <div class="register-link"><a href="register.html">Don't have an account yet? Register!</a></div>
   </form>
