Todos Seite Aufbau2

--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -14,9 +14,54 @@
 
     <nav>
         <h1>WAS GEHT AB!!!!?! das habe ich mich schon immer gefragt
-            <p> Das will ich abchecken</p>
-            <p> <a href="http://localhost:4000/login.html" title="MEINE GÜTE IST DAS WILD">
-                MEINE GÜTE IST DAS WILD</a></p>
+              
+                <table>
+                    <tbody>
+                        <thead>
+                            <tr>
+                              <caption>Group</caption>
+                            </tr>
+                          </thead>
+                        <tr><td style=max-width:2px>1</td><td>test</td></tr>
+                        <tr><td style="width:2px">2</td><td>test</td></tr>
+                        <tr><td style="width:20px">3</td><td>test</td></tr>
+                        <tr><td style="width:20px">4</td><td>test</td></tr>
+                        <tr><td style="width:20px">5</td><td>test</td></tr>
+                        <tr><td style="width:20px">6</td><td>test</td></tr>
+                        <tr><td style="width:20px">7</td><td>test</td></tr>
+                        <tr><td style="width:20px">8</td><td>test</td></tr>
+                        <tr><td style="width:20px">9</td><td>test</td></tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                          <td>Add ToDo</td>
+                        </tr>
+                      </tfoot>        
+                </table></a></p>
+
+                <table>
+                    <thead>
+                        <tr>
+                          <caption>Personal</caption>
+                        </tr>
+                      </thead>
+                    <tbody>
+                        <tr><td>1</td><td>test</td></tr>
+                        <tr><td>2</td><td>test</td></tr>
+                        <tr><td>3</td><td>test</td></tr>
+                        <tr><td>4</td><td>test</td></tr>
+                        <tr><td>5</td><td>test</td></tr>
+                        <tr><td>6</td><td>test</td></tr>
+                        <tr><td>7</td><td>test</td></tr>
+                        <tr><td>8</td><td>test</td></tr>
+                        <tr><td>9</td><td>test</td></tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                          <td>Add ToDo</td>
+                        </tr>
+                      </tfoot>        
+                </table></a></p>
         </h1>
 
     </nav>
