--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html lang="en"></html>
+<html lang="en">
+
 <head>
-    <link rel="stylesheet" href="styles/TODOs.css">
-    <title>To do Liste</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/TODOs.css">
+
+
+  <title>TODOs</title>
 </head>
 
 <body>
@@ -22,15 +27,15 @@
                               <caption>Group</caption>
                             </tr>
                           </thead>
-                        <tr><td style=max-width:2px>1</td><td>test</td></tr>
-                        <tr><td style="width:2px">2</td><td>test</td></tr>
-                        <tr><td style="width:20px">3</td><td>test</td></tr>
-                        <tr><td style="width:20px">4</td><td>test</td></tr>
-                        <tr><td style="width:20px">5</td><td>test</td></tr>
-                        <tr><td style="width:20px">6</td><td>test</td></tr>
-                        <tr><td style="width:20px">7</td><td>test</td></tr>
-                        <tr><td style="width:20px">8</td><td>test</td></tr>
-                        <tr><td style="width:20px">9</td><td>test</td></tr>
+                        <tr><td>1</td><td>test</td></tr>
+                        <tr><td>2</td><td>test</td></tr>
+                        <tr><td>3</td><td>test</td></tr>
+                        <tr><td>4</td><td>test</td></tr>
+                        <tr><td>5</td><td>test</td></tr>
+                        <tr><td>6</td><td>test</td></tr>
+                        <tr><td>7</td><td>test</td></tr>
+                        <tr><td>8</td><td>test</td></tr>
+                        <tr><td>9</td><td>test</td></tr>
                     </tbody>
                     <tfoot>
                         <tr>
