--- a/public/login.html
+++ b/public/login.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/login.css">
   <script defer src="js/login.js"></script>
@@ -11,7 +12,7 @@
 
 
 <body>
-  <div id="login-error-msg" class="error-message" style="display: none;">Please fill out all fields.</div> </div>
+  <div id="login-error-msg" class="error-message">Please fill out all fields.</div> </div>
 
   <form id="login-form">
     <h3>Login</h3>
