--- a/public/register.html
+++ b/public/register.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/register.css">
 
@@ -23,7 +24,7 @@
     <label for="password">Repeat your Password</label>
     <input type="password" placeholder="Type your Password here" id="password">
 
-    <button>Sign Up</button>
+    <button type="button">Sign Up</button>
 
   </form>
 </body>
