--- a/public/register.html
+++ b/public/register.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
 <head>
-
   <link rel="stylesheet" href="styles/general.css">
   <link rel="stylesheet" href="styles/register.css">
   <title>Registration Form</title>
@@ -24,8 +23,7 @@
     <label for="passwordRepeat">Repeat your Password</label>
     <input type="password" placeholder="Repeat your Password here" id="passwordRepeat">
 
-    <button>Sign Up</button>
-
+    <button type="button" id="registerButton">Sign Up</button>
   </form>
 </body>
 
