--- a/public/test.html
+++ b/public/test.html
@@ -6,11 +6,12 @@
   <link rel="stylesheet" href="styles/register.css">
   <title>Registration Form</title>
   <script defer src="js/addtask.js"></script>
+  <script defer src="js/deleteTask.js"></script>
 </head>
 
 <body>
 
-    <button onclick = 'addTask()'>Sign Up</button>
+    <button onclick = 'deleteTask()'>Sign Up</button>
 </body>
 
 </html>
