sitemap.xml und robots.txt hinzugefügt + kleine Änderung Homepage

--- a/public/HomePage.html
+++ b/public/HomePage.html
@@ -38,7 +38,7 @@
 </nav>
 
 <main>
-  <h1>Welcome to Our Website</h1>
+  <h1>Arbeit organisieren leicht gemacht mit dieser TODO-Webseite</h1>
   <p>This is a sample website with a hover-based dropdown menu navigation bar. The header is pinned to the top when scrolling down.</p>
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis scelerisque justo sit amet est rhoncus, et tincidunt ipsum vestibulum. Vestibulum hendrerit, dui nec pellentesque pellentesque, lacus lorem consequat dolor, a suscipit sem magna et libero. Cras aliquet interdum ex, vel ultricies ex dapibus nec. Vivamus lacinia ligula vel nunc aliquet, sit amet pellentesque sem pellentesque. Sed semper lacinia tempor. Suspendisse potenti. Sed efficitur, dolor id cursus ultricies, tellus tortor faucibus enim, vel cursus lectus magna quis magna. Nam at ante mi. Nullam rutrum dui nec lacus placerat, nec interdum ex suscipit.</p>
   <p>Nullam vestibulum sem nec quam auctor, in convallis lorem varius. Proin ac tortor vitae est cursus tempus nec eu metus. Nullam scelerisque dolor at dui volutpat, vel consequat justo laoreet. Integer in dolor nec sapien convallis fermentum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus quis eros odio. Integer convallis mauris in eros vehicula, at vestibulum ipsum ultricies. Cras vitae justo sit amet elit lacinia commodo. Duis ut tincidunt felis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
