--- a/public/test.html
+++ b/public/test.html
@@ -7,11 +7,12 @@
   <title>Registration Form</title>
   <script defer src="js/addtask.js"></script>
   <script defer src="js/deleteTask.js"></script>
+  <script defer src="js/dashboard.js"></script>
 </head>
 
 <body>
 
-    <button onclick = 'deleteTask()'>Sign Up</button>
+    <button onclick = 'removeUserFromList()'>Sign Up</button>
 </body>
 
 </html>
