Verbesserungen an Homepage

--- a/public/HomePage.html
+++ b/public/HomePage.html
@@ -1,68 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="stylesheet" href="styles/HomePage.css" >
-<title>Hover-based Dropdown Menu Navigation Bar</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/HomePage.css" />
+    <title>Homepage work in progress</title>
+  </head>
+  <body>
+    <nav>
+      <div class="nav-left">
+        <ul>
+          <li><img src="pictures/ToDo-neu.png" class="Logo" /></li>
+          <li>
+            <a href="#">Services</a>
+            <ul>
+              <li><a href="#">Service 1</a></li>
+              <li><a href="#">Service 2</a></li>
+              <li><a href="#">Service 3</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">About</a>
+            <ul>
+              <li><a href="#">Company</a></li>
+              <li><a href="#">Team</a></li>
+              <li><a href="#">Mission</a></li>
+            </ul>
+          </li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+      <div class="nav-right">
+        <a href="login.html"
+          ><button type="button" id="button">Log In</button></a
+        >
+      </div>
+    </nav>
 
-</head>
-<body>
+    <div class="container">
+      <div class="content">
+        <h1>Arbeit organisieren leicht gemacht mit dieser TODO-Webseite</h1>
 
-<nav>
-  <div class="nav-left">
-  <ul>
-    <li><img src="pictures/ToDo-neu.png" class="Logo"></img> </li>
-    <li>
-      <a href="#">Services</a>
-      <ul>
-        <li><a href="#">Service 1</a></li>
-        <li><a href="#">Service 2</a></li>
-        <li><a href="#">Service 3</a></li>
-      </ul>
-    </li>
-    <li>
-      <a href="#">About</a>
-      <ul>
-        <li><a href="#">Company</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Mission</a></li>
-      </ul>
-    </li>
-    <li><a href="#">Contact</a></li>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+          scelerisque justo sit amet est rhoncus, et tincidunt ipsum vestibulum.
+          Vestibulum hendrerit, dui nec pellentesque pellentesque, lacus lorem
+          consequat dolor, a suscipit sem magna et libero. Cras aliquet interdum
+          ex, vel ultricies ex dapibus nec. Vivamus lacinia ligula vel nunc
+          aliquet, sit amet pellentesque sem pellentesque. Sed semper lacinia
+          tempor. Suspendisse potenti. Sed efficitur, dolor id cursus ultricies,
+          tellus tortor faucibus enim, vel cursus lectus magna quis magna. Nam
+          at ante mi. Nullam rutrum dui nec lacus placerat, nec interdum ex
+          suscipit.
+        </p>
+        <p>
+          Nullam vestibulum sem nec quam auctor, in convallis lorem varius.
+          Proin ac tortor vitae est cursus tempus nec eu metus. Nullam
+          scelerisque dolor at dui volutpat, vel consequat justo laoreet.
+          Integer in dolor nec sapien convallis fermentum. Pellentesque habitant
+          morbi tristique senectus et netus et malesuada fames ac turpis
+          egestas. Vivamus quis eros odio. Integer convallis mauris in eros
+          vehicula, at vestibulum ipsum ultricies. Cras vitae justo sit amet
+          elit lacinia commodo. Duis ut tincidunt felis. Pellentesque habitant
+          morbi tristique senectus et netus et malesuada fames ac turpis
+          egestas.
+        </p>
+        <p>
+          Fusce rhoncus velit ut sapien gravida tempor. Morbi vestibulum eros a
+          purus tristique, nec rhoncus ipsum commodo. Pellentesque auctor felis
+          sit amet leo fringilla convallis. Suspendisse sit amet aliquam ligula,
+          non maximus lorem. Proin pretium nunc nec venenatis lobortis.
+          Vestibulum vel accumsan orci, nec condimentum eros. Nulla posuere quam
+          ut mauris volutpat commodo. Morbi dictum faucibus nunc non tempus.
+          Curabitur quis dolor eu arcu iaculis iaculis id at turpis. Sed
+          suscipit justo eu dui fermentum, at scelerisque purus bibendum. Cras
+          lacinia placerat turpis nec ultrices. Sed pretium elit a augue
+          consequat fringilla. In at sapien orci.
+        </p>
+        <p>
+          Curabitur mattis, arcu in fermentum mattis, lacus leo laoreet erat, id
+          ultricies sapien turpis nec libero. Duis tristique dolor ac tellus
+          dapibus dapibus. Morbi sodales nibh nec nunc tincidunt aliquet.
+          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+          posuere cubilia curae; Fusce auctor id libero vitae viverra. Aliquam
+          convallis, mauris auctor pellentesque finibus, dui mi hendrerit
+          tortor, a tincidunt lorem metus nec leo. Mauris sit amet condimentum
+          nulla. Donec venenatis, lectus at ultricies dictum, turpis ante
+          tristique ipsum, nec dictum ipsum lectus ac ante. Nulla interdum
+          ullamcorper nisl non dapibus. Aenean sed erat tellus. Vestibulum
+          ultricies non magna at ultrices. Nam tempor libero ac nunc auctor, sed
+          gravida libero dignissim.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis
+          scelerisque justo sit amet est rhoncus, et tincidunt ipsum vestibulum.
+          Vestibulum hendrerit, dui nec pellentesque pellentesque, lacus lorem
+          consequat dolor, a suscipit sem magna et libero. Cras aliquet interdum
+          ex, vel ultricies ex dapibus nec. Vivamus lacinia ligula vel nunc
+          aliquet, sit amet pellentesque sem pellentesque. Sed semper lacinia
+          tempor. Suspendisse potenti. Sed efficitur, dolor id cursus ultricies,
+          tellus tortor faucibus enim, vel cursus lectus magna quis magna. Nam
+          at ante mi. Nullam rutrum dui nec lacus placerat, nec interdum ex
+          suscipit.
+        </p>
+        <p>
+          Nullam vestibulum sem nec quam auctor, in convallis lorem varius.
+          Proin ac tortor vitae est cursus tempus nec eu metus. Nullam
+          scelerisque dolor at dui volutpat, vel consequat justo laoreet.
+          Integer in dolor nec sapien convallis fermentum. Pellentesque habitant
+          morbi tristique senectus et netus et malesuada fames ac turpis
+          egestas. Vivamus quis eros odio. Integer convallis mauris in eros
+          vehicula, at vestibulum ipsum ultricies. Cras vitae justo sit amet
+          elit lacinia commodo. Duis ut tincidunt felis. Pellentesque habitant
+          morbi tristique senectus et netus et malesuada fames ac turpis
+          egestas.
+        </p>
+        <p>
+          Fusce rhoncus velit ut sapien gravida tempor. Morbi vestibulum eros a
+          purus tristique, nec rhoncus ipsum commodo. Pellentesque auctor felis
+          sit amet leo fringilla convallis. Suspendisse sit amet aliquam ligula,
+          non maximus lorem. Proin pretium nunc nec venenatis lobortis.
+          Vestibulum vel accumsan orci, nec condimentum eros. Nulla posuere quam
+          ut mauris volutpat commodo. Morbi dictum faucibus nunc non tempus.
+          Curabitur quis dolor eu arcu iaculis iaculis id at turpis. Sed
+          suscipit justo eu dui fermentum, at scelerisque purus bibendum. Cras
+          lacinia placerat turpis nec ultrices. Sed pretium elit a augue
+          consequat fringilla. In at sapien orci.
+        </p>
+        <p>
+          Curabitur mattis, arcu in fermentum mattis, lacus leo laoreet erat, id
+          ultricies sapien turpis nec libero. Duis tristique dolor ac tellus
+          dapibus dapibus. Morbi sodales nibh nec nunc tincidunt aliquet.
+          Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
+          posuere cubilia curae; Fusce auctor id libero vitae viverra. Aliquam
+          convallis, mauris auctor pellentesque finibus, dui mi hendrerit
+          tortor, a tincidunt lorem metus nec leo. Mauris sit amet condimentum
+          nulla. Donec venenatis, lectus at ultricies dictum, turpis ante
+          tristique ipsum, nec dictum ipsum lectus ac ante. Nulla interdum
+          ullamcorper nisl non dapibus. Aenean sed erat tellus. Vestibulum
+          ultricies non magna at ultrices. Nam tempor libero ac nunc auctor, sed
+          gravida libero dignissim.
+        </p>
+      </div>
+
+      <aside class="sidebar">
+        <h2>Neuigkeiten</h2>
+        <ul>
+          <li>Neuer Artikel 1</li>
+          <li>Neuer Artikel 2</li>
+          <li>Neuer Artikel 3</li>
+        </ul>
+      </aside>
     </div>
-    <div class="nav-right">
-      <a href="login.html"><button type="button" id="button">Log In</button></a>
-    </div>
-  
-</nav>
-
-<div class="container">
-  <div class="content">
-    <h1>Arbeit organisieren leicht gemacht mit dieser TODO-Webseite</h1>
-    <p>This is a sample website with a hover-based dropdown menu navigation bar. The header is pinned to the top when scrolling down.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis scelerisque justo sit amet est rhoncus, et tincidunt ipsum vestibulum. Vestibulum hendrerit, dui nec pellentesque pellentesque, lacus lorem consequat dolor, a suscipit sem magna et libero. Cras aliquet interdum ex, vel ultricies ex dapibus nec. Vivamus lacinia ligula vel nunc aliquet, sit amet pellentesque sem pellentesque. Sed semper lacinia tempor. Suspendisse potenti. Sed efficitur, dolor id cursus ultricies, tellus tortor faucibus enim, vel cursus lectus magna quis magna. Nam at ante mi. Nullam rutrum dui nec lacus placerat, nec interdum ex suscipit.</p>
-    <p>Nullam vestibulum sem nec quam auctor, in convallis lorem varius. Proin ac tortor vitae est cursus tempus nec eu metus. Nullam scelerisque dolor at dui volutpat, vel consequat justo laoreet. Integer in dolor nec sapien convallis fermentum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus quis eros odio. Integer convallis mauris in eros vehicula, at vestibulum ipsum ultricies. Cras vitae justo sit amet elit lacinia commodo. Duis ut tincidunt felis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-    <p>Fusce rhoncus velit ut sapien gravida tempor. Morbi vestibulum eros a purus tristique, nec rhoncus ipsum commodo. Pellentesque auctor felis sit amet leo fringilla convallis. Suspendisse sit amet aliquam ligula, non maximus lorem. Proin pretium nunc nec venenatis lobortis. Vestibulum vel accumsan orci, nec condimentum eros. Nulla posuere quam ut mauris volutpat commodo. Morbi dictum faucibus nunc non tempus. Curabitur quis dolor eu arcu iaculis iaculis id at turpis. Sed suscipit justo eu dui fermentum, at scelerisque purus bibendum. Cras lacinia placerat turpis nec ultrices. Sed pretium elit a augue consequat fringilla. In at sapien orci.</p>
-    <p>Curabitur mattis, arcu in fermentum mattis, lacus leo laoreet erat, id ultricies sapien turpis nec libero. Duis tristique dolor ac tellus dapibus dapibus. Morbi sodales nibh nec nunc tincidunt aliquet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce auctor id libero vitae viverra. Aliquam convallis, mauris auctor pellentesque finibus, dui mi hendrerit tortor, a tincidunt lorem metus nec leo. Mauris sit amet condimentum nulla. Donec venenatis, lectus at ultricies dictum, turpis ante tristique ipsum, nec dictum ipsum lectus ac ante. Nulla interdum ullamcorper nisl non dapibus. Aenean sed erat tellus. Vestibulum ultricies non magna at ultrices. Nam tempor libero ac nunc auctor, sed gravida libero dignissim.</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis scelerisque justo sit amet est rhoncus, et tincidunt ipsum vestibulum. Vestibulum hendrerit, dui nec pellentesque pellentesque, lacus lorem consequat dolor, a suscipit sem magna et libero. Cras aliquet interdum ex, vel ultricies ex dapibus nec. Vivamus lacinia ligula vel nunc aliquet, sit amet pellentesque sem pellentesque. Sed semper lacinia tempor. Suspendisse potenti. Sed efficitur, dolor id cursus ultricies, tellus tortor faucibus enim, vel cursus lectus magna quis magna. Nam at ante mi. Nullam rutrum dui nec lacus placerat, nec interdum ex suscipit.</p>
-    <p>Nullam vestibulum sem nec quam auctor, in convallis lorem varius. Proin ac tortor vitae est cursus tempus nec eu metus. Nullam scelerisque dolor at dui volutpat, vel consequat justo laoreet. Integer in dolor nec sapien convallis fermentum. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus quis eros odio. Integer convallis mauris in eros vehicula, at vestibulum ipsum ultricies. Cras vitae justo sit amet elit lacinia commodo. Duis ut tincidunt felis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
-    <p>Fusce rhoncus velit ut sapien gravida tempor. Morbi vestibulum eros a purus tristique, nec rhoncus ipsum commodo. Pellentesque auctor felis sit amet leo fringilla convallis. Suspendisse sit amet aliquam ligula, non maximus lorem. Proin pretium nunc nec venenatis lobortis. Vestibulum vel accumsan orci, nec condimentum eros. Nulla posuere quam ut mauris volutpat commodo. Morbi dictum faucibus nunc non tempus. Curabitur quis dolor eu arcu iaculis iaculis id at turpis. Sed suscipit justo eu dui fermentum, at scelerisque purus bibendum. Cras lacinia placerat turpis nec ultrices. Sed pretium elit a augue consequat fringilla. In at sapien orci.</p>
-    <p>Curabitur mattis, arcu in fermentum mattis, lacus leo laoreet erat, id ultricies sapien turpis nec libero. Duis tristique dolor ac tellus dapibus dapibus. Morbi sodales nibh nec nunc tincidunt aliquet. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce auctor id libero vitae viverra. Aliquam convallis, mauris auctor pellentesque finibus, dui mi hendrerit tortor, a tincidunt lorem metus nec leo. Mauris sit amet condimentum nulla. Donec venenatis, lectus at ultricies dictum, turpis ante tristique ipsum, nec dictum ipsum lectus ac ante. Nulla interdum ullamcorper nisl non dapibus. Aenean sed erat tellus. Vestibulum ultricies non magna at ultrices. Nam tempor libero ac nunc auctor, sed gravida libero dignissim.</p>
-    <p>This is a sample website with a hover-based dropdown menu navigation bar.</p>
-    <p>This is a sample website with a hover-based dropdown menu navigation bar.</p>
-  </div>  
-
-  <aside class="sidebar">
-    <h2>Neuigkeiten</h2>
-    <ul>
-      <li>Neuer Artikel 1</li>
-      <li>Neuer Artikel 2</li>
-      <li>Neuer Artikel 3</li>
-    </ul>
-  </aside>
-  <footer>
-    <p>&copy; 2024 Meine Firma. Alle Rechte vorbehalten.</p>
-  </footer>
-</body>
+    <footer>
+      <p>&copy; 2024 Meine Firma. Alle Rechte vorbehalten.</p>
+    </footer>
+  </body>
 </html>
