Update Todo Seite

--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -43,7 +43,7 @@
         <div class = "Task">
           hello
           <input type="checkbox" class = "checkbox">
-          <img src="pictures/trashcan2.png" class="trashicon"></img>
+          <img src="pictures/trashcan2.png" class="trashicon">
         </div>
         <div class = "Task">
           hello
