--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -28,7 +28,7 @@
       <div class="Tasklisthead"><!-- Der angeziegte Name der ausgewählten Liste-->
         Listname
       </div>
-      <div class="Tasklistcontent"> <!-- Inhalt der ausgewählten Liste-->
+      <div class="Tasklistcontent" id="taskContainer"> <!-- Inhalt der ausgewählten Liste-->
         <div class="Task">
           <input type="checkbox" class="checkbox">
           <p>Hallo ich bin Task Nummer 1</p>
@@ -59,7 +59,7 @@
   <div id="addListPopUp">
     <form id="addListForm">
       <label for="listname">Listenname</label>
-      <input type="text" name="taskname" id="taskname">
+      <input type="text" name="listname" id="listname">
       <button type="button" name="listSpeichern" id="listSpeichern">Speichern</button>
     </form>
   </div>
