--- a/public/test.html
+++ b/public/test.html
@@ -8,11 +8,12 @@
   <script defer src="js/addtask.js"></script>
   <script defer src="js/deleteTask.js"></script>
   <script defer src="js/dashboard.js"></script>
+  <script defer src="js/test.js"></script>
 </head>
 
 <body>
 
-    <button onclick = 'removeUserFromList()'>Sign Up</button>
+    <button onclick = 'getTasks(1)'>Sign Up</button>
 </body>
 
 </html>
