Listen auswahl trash icon

--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -21,7 +21,12 @@
     <div class="Taskselection"><!-- Auswahl der Todo Liste-->
       <input type="button" class="Addbuttontasklist" value="+Add tasklist" onclick="addList()">
       <div class="groupTasks" id="listContainer"> <!-- listen Auswahl-->
-          <p class="List">Liste 1</p>
+          
+            <div class="List">
+              <p>Liste 1 </p>
+              <img src="pictures/trashcan2.png" class="trashicon2">
+            </div>
+          
       </div>
     </div>
     <div class="Tasklist"> <!-- Darstellung der ausgewählten Liste-->
