--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -11,7 +11,7 @@
   <script src="js/dashboard.js"></script>
 </head>
 
-<body onload="//loadAllTaskLists();">
+<body onload="loadAllTaskLists();">
   <header> <!-- Kopfzeile mit Logo und Account Dartstellung-->
     <img src="pictures/ToDo-neu.png" class="Logo">
     <div class="Account"><span class="circle"></span> HEYO!!</div>
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="Tasklist"> <!-- Darstellung der ausgewählten Liste-->
-      <div class="Tasklisthead"><!-- Der angeziegte Name der ausgewählten Liste-->
+      <div class="Tasklisthead" id="TasklistHead"><!-- Der angeziegte Name der ausgewählten Liste-->
         Listname
       </div>
       <div class="Taskoption">
