--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -13,8 +13,12 @@
 
 <body onload="//loadAllTaskLists();">
   <header> <!-- Kopfzeile mit Logo und Account Dartstellung-->
-    <img src="pictures/ToDo-neu.png" class="Logo">
-    <div class="Account"><span class="circle"></span> HEYO!!</div>
+    <img src="pictures/ToDo-neu.png" class="Logo" href ="HomePage.html">
+    <div class="Account"><span class="circle"></span>
+      <p id="username">
+          Mein Name
+      </p>
+  </div>
   </header>
   <hr>
   <div class="content"><!-- Aufbau der Todo Webseite mit Auswahl der Todo Liste und Präsentation der Liste-->
