--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -11,7 +11,7 @@
   <script src="js/dashboard.js"></script>
 </head>
 
-<body onload="loadAllTaskLists()">
+<body onload="loadAllTaskLists(); loadUsername()">
   <header> <!-- Kopfzeile mit Logo und Account Dartstellung-->
     <img src="pictures/ToDo-neu.png" class="Logo">
     <div class="Account"><span class="circle"></span> HEYO!!</div>
