--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -30,9 +30,9 @@
     </div>
     <div class="Tasklist"> <!-- Darstellung der ausgewählten Liste-->
       <div class="Tasklisthead" id="TasklistHead"><!-- Der angeziegte Name der ausgewählten Liste-->
-        Listname
+        Wähle eine Liste aus
       </div>
-      <div class="Taskoption">
+      <div id="addTaskButton" class="Taskoption">
         <button class="Addbuttontask" onclick='addTask()'>Add Task</button>
       </div>
       <div class="Tasklistcontent" id="taskContainer"> <!-- Inhalt der ausgewählten Liste-->
