--- a/public/TODOs.html
+++ b/public/TODOs.html
@@ -22,10 +22,9 @@
   </header>
   <hr>
   <div class="content"><!-- Aufbau der Todo Webseite mit Auswahl der Todo Liste und Präsentation der Liste-->
-    <div class="Taskselection"><!-- Auswahl der Todo Liste-->
+    <div class="listselection"><!-- Auswahl der Todo Liste-->
       <input type="button" class="Addbuttontasklist" value="+Add tasklist" onclick="addList()">
       <div class="groupTasks" id="listContainer"> <!-- listen Auswahl-->
-          
       </div>
     </div>
     <div class="Tasklist"> <!-- Darstellung der ausgewählten Liste-->
