--- a/public/HomePage.html
+++ b/public/HomePage.html
@@ -30,6 +30,15 @@
       </ul>
     </nav>
 
+    <div class="image-container">
+      <img src="pictures/Bild 1.jpg" alt="Description of your image">
+      <div class="text-overlay">
+        <h1>Arbeit organisieren leicht gemacht mit dieser TODO-Webseite!</h1>
+        <p>Additional text if needed</p>
+      </div>
+    </div>
+
+
     <div class="container">
       <div class="content">
         <h1>Arbeit organisieren leicht gemacht mit dieser TODO-Webseite</h1>
